--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
 <main>
   <div class="container">
     <app-accueil></app-accueil>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias porro nulla nostrum qui, numquam odio enim, tenetur modi necessitatibus nobis est animi minus velit culpa temporibus adipisci incidunt corrupti. Temporibus perferendis, id iste cupiditate dolorem aliquam laboriosam repellendus harum quo.</p>
+    <div class="content">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias porro nulla nostrum qui, numquam odio enim, tenetur modi necessitatibus nobis est animi minus velit culpa temporibus adipisci incidunt corrupti. Temporibus perferendis, id iste cupiditate dolorem aliquam laboriosam repellendus harum quo.</p>
+    </div>
   </div>
-  
 </main>
 
 <app-footer></app-footer>
