--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer mt-auto py-3">
     <div class="container">
-        <span class="text-muted">Les meilleurs pizzas de Ciney.</span>
+        <span>Les meilleurs pizzas de Ciney.</span>
     </div>
 </footer>
