--- a/src/app/components/accueil/accueil.component.scss
+++ b/src/app/components/accueil/accueil.component.scss
@@ -5,3 +5,12 @@
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 }
+
+
+.red {
+    color: red;
+}
+
+.blue {
+    color: blue;
+}
