--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -2,11 +2,21 @@
 <div class="content">
     <h2>Accueil</h2>
 
-    <app-demo-binding></app-demo-binding>
+    <div class="row">
 
-    <app-demo-pipe></app-demo-pipe>
-    
+        <div class="col-8">
+            <app-demo-binding></app-demo-binding>
 
+            <app-demo-pipe></app-demo-pipe>
+
+            <app-demo-directives></app-demo-directives>
+        </div>
+        <div class="col-4">
+            <h4>Exo</h4>
+
+            <app-chrono></app-chrono>
+        </div>
+    </div>
 
     
 </div>
