--- a/src/app/components/chrono/chrono.component.html
+++ b/src/app/components/chrono/chrono.component.html
@@ -2,7 +2,7 @@
 
     <h3>Chronomètre</h3>
 
-    <p> {{ minutes | number:'2.0-0' }}:{{ secondes | number:'2.0-0' }} </p>
+    <p> {{ secondes | convertSec }} </p>
 
     <div>
         <button (click)="play()">play</button>
