--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -15,6 +15,9 @@
             <h4>Exo</h4>
 
             <app-chrono></app-chrono>
+
+            <app-exo-directive></app-exo-directive>
+            <app-exo-directive-struct></app-exo-directive-struct>
         </div>
     </div>
 
