added exo+demo module

--- a/src/app/demo/components/demo-binding/demo-binding.component.html
+++ b/src/app/demo/components/demo-binding/demo-binding.component.html
@@ -35,6 +35,10 @@
 
         <div>
             <h3 [class]="attributeBindingClass">binding d'attribut</h3>
+
+            <p>
+                si on veut donner à un attribut une valeur évaluer en typescript, on peut entourer 
+            </p>
         </div>
 
     </div>
