--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,25 +1,3 @@
+<h3>Bienvenue sur Pizza Angular</h3>
 
-<div class="content">
-    <h2>Accueil</h2>
-
-    <div class="row">
-
-        <div class="col-8">
-            <app-demo-binding></app-demo-binding>
-
-            <app-demo-pipe></app-demo-pipe>
-
-            <app-demo-directives></app-demo-directives>
-        </div>
-        <div class="col-4">
-            <h4>Exo</h4>
-
-            <app-chrono></app-chrono>
-
-            <app-exo-directive></app-exo-directive>
-            <app-exo-directive-struct></app-exo-directive-struct>
-        </div>
-    </div>
-
-    
-</div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorum magni deserunt fugiat molestias natus harum mollitia nobis magnam necessitatibus repellendus ab explicabo blanditiis voluptatem in. Nemo, voluptas debitis autem ut, enim optio libero maxime sequi laudantium nobis culpa provident alias et dignissimos voluptates similique omnis ipsam facere, nihil ipsa.</p>
