--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,22 +13,10 @@
                 <a class="nav-link" routerLink="/accueil" routerLinkActive="active">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/demo/binding" routerLinkActive="active">demo binding</a>
+                <a class="nav-link" routerLink="/demo" routerLinkActive="active">demo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/demo/pipe" routerLinkActive="active">demo pipe</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/demo/directive" routerLinkActive="active">demo directive</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/exo/chrono" routerLinkActive="active">exo chrono</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/exo/directive" routerLinkActive="active">exo directive</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/exo/dir-struct" routerLinkActive="active">exo dir struct</a>
+                <a class="nav-link" routerLink="/exo" routerLinkActive="active">exo</a>
               </li>
             </ul>
           </div>
