--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" routerLink="/accueil" routerLinkActive="active">Accueil</a>
+                <a class="nav-link" routerLink="/accueil" routerLinkActive="active">accueil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="/demo" routerLinkActive="active">demo</a>
