--- a/src/app/exo/components/exo/exo.component.html
+++ b/src/app/exo/components/exo/exo.component.html
@@ -1,26 +1,24 @@
-
-
 <nav class="navbar navbar-expand-lg">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" routerLink="/demo/accueil" routerLinkActive="active">accueil</a>
-          </li>
+            <a class="nav-link" routerLink="/exo/accueil" routerLinkActive="active">accueil</a>
+            </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/demo/binding" routerLinkActive="active">binding</a>
+            <a class="nav-link" routerLink="/exo/chrono" routerLinkActive="active">chrono</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/demo/pipe" routerLinkActive="active">pipe</a>
+            <a class="nav-link" routerLink="/exo/directive" routerLinkActive="active">directives</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/demo/directive" routerLinkActive="active">directive</a>
+            <a class="nav-link" routerLink="/exo/dir-struct" routerLinkActive="active">directive struct</a>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>
 
 <div>
     <router-outlet></router-outlet>
