demo input/output

--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/demo/directive" routerLinkActive="active">directive</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/demo/comm" routerLinkActive="active">input/output</a>
+        </li>
       </ul>
     </div>
   </nav>
