correction exo in/out

--- a/src/app/exo/components/exo/exo.component.html
+++ b/src/app/exo/components/exo/exo.component.html
@@ -16,6 +16,9 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/exo/dir-struct" routerLinkActive="active">directive struct</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/exo/comm" routerLinkActive="active">stock manager</a>
+        </li>
         </ul>
     </div>
 </nav>
