Exo parent + login service

--- a/src/app/exo/components/exo/exo.component.html
+++ b/src/app/exo/components/exo/exo.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/exo/comm" routerLinkActive="active">stock manager</a>
         </li>
+				<li class="nav-item">
+					<a class="nav-link" routerLink="/exo/parent" routerLinkActive="active">parent</a>
+				</li>
         </ul>
     </div>
 </nav>
