--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/demo/comm" routerLinkActive="active">input/output</a>
         </li>
+				<li class="nav-item">
+          <a class="nav-link" routerLink="/demo/login" routerLinkActive="active">login service</a>
+        </li>
       </ul>
     </div>
   </nav>
