--- a/src/app/exo/components/parent/parent.component.html
+++ b/src/app/exo/components/parent/parent.component.html
@@ -1,6 +1,6 @@
 <section class="row">
 	<div class="col-6">
-		<app-create-name (onAddName)="addName($event)"/>
+		<app-create-name />
 	</div>
 	<div class="col-6">
 		<app-list-name [names]="names"/>
