--- a/src/app/demo/components/login/login.component.html
+++ b/src/app/demo/components/login/login.component.html
@@ -1,15 +1,15 @@
 <section *ngIf="!connectedUser">
-	<div>
-		<label for="login">Login:</label>
-		<input type="text" id="login" [(ngModel)]="data.login">
+	<div class="form-row my-3">
+		<div class="form-group col-6">
+			<label for="login">Login:</label>
+			<input type="text" id="login" class="form-control" [(ngModel)]="data.login" />
+		</div>
+		<div class="form-group col-6">
+			<label for="password">Password:</label>
+			<input type="password" id="password" class="form-control" [(ngModel)]="data.password" />
+		</div>
 	</div>
-	<div>
-		<label for="password">Password:</label>
-		<input type="password" id="password" [(ngModel)]="data.password">
-	</div>
-	<div>
-		<button (click)="connection()">Se connecter</button>
-	</div>
+	<button (click)="connection()" class="btn btn-danger">Se connecter</button>
 </section>
 
 <section *ngIf="connectedUser">
