--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -24,6 +24,9 @@
 				<li class="nav-item">
           <a class="nav-link" routerLink="/demo/login" routerLinkActive="active">login service</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/demo/forms" routerLinkActive="active">formulaires</a>
+        </li>
       </ul>
     </div>
   </nav>
