--- a/src/app/exo/components/exo/exo.component.html
+++ b/src/app/exo/components/exo/exo.component.html
@@ -4,24 +4,30 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" routerLink="/exo/accueil" routerLinkActive="active">accueil</a>
+            <li class="nav-item active">
+                <a class="nav-link" routerLink="/exo/accueil" routerLinkActive="active">accueil</a>
+                </li>
+            <li class="nav-item active">
+                <a class="nav-link" routerLink="/exo/chrono" routerLinkActive="active">chrono</a>
             </li>
-        <li class="nav-item active">
-            <a class="nav-link" routerLink="/exo/chrono" routerLinkActive="active">chrono</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/exo/directive" routerLinkActive="active">directives</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/exo/dir-struct" routerLinkActive="active">directive struct</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/exo/comm" routerLinkActive="active">stock manager</a>
-        </li>
-				<li class="nav-item">
-					<a class="nav-link" routerLink="/exo/parent" routerLinkActive="active">parent</a>
-				</li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/directive" routerLinkActive="active">directives</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/dir-struct" routerLinkActive="active">directive struct</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/comm" routerLinkActive="active">stock manager</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/parent" routerLinkActive="active">parent</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/fav-pizza" routerLinkActive="active">fav pizza</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/exo/cart" routerLinkActive="active">shopping cart</a>
+            </li>
         </ul>
     </div>
 </nav>
