demo forms validation

--- a/src/app/demo/components/demo-forms/demo-forms.component.html
+++ b/src/app/demo/components/demo-forms/demo-forms.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="mb-3">
-        <input type="text" id="in-fav" class="form-check-input" formControlName="favorite">
+        <input type="checkbox" id="in-fav" class="form-check-input" formControlName="favorite">
         <label for="in-fav" class="form-label">favorite</label>
     </div>
 
