--- a/src/app/exo/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/exo/components/shopping-cart/shopping-cart.component.html
@@ -1,25 +1,25 @@
 <h3>Exo shopping cart</h3>
 
-<div>
+<form [formGroup]="form" (ngSubmit)="addToCart()">
     <h4>Form ajout</h4>
     <div class="mb-3">
         <label for="in-name" class="form-label">name</label>
-        <input type="text" class="form-control" id="in-name" [(ngModel)]="toAdd.name">
+        <input type="text" class="form-control" id="in-name" formControlName="name">
     </div>
     <div class="mb-3">
         <label for="in-price" class="form-label">price</label>
-        <input type="number" class="form-control" id="in-price" [(ngModel)]="toAdd.price">
+        <input type="number" class="form-control" id="in-price" formControlName="price">
     </div>
     <div class="mb-3">
         <label for="in-qtt" class="form-label">qtt</label>
-        <input type="number" class="form-control" id="in-qtt" [(ngModel)]="toAdd.qtt">
+        <input type="number" class="form-control" id="in-qtt" formControlName="qtt">
     </div>
     <div class="mb-3">
-        <input type="checkbox" class="form-check-input" id="in-promo" [(ngModel)]="toAdd.promo">
+        <input type="checkbox" class="form-check-input" id="in-promo" formControlName="promo">
         <label for="in-promo" class="form-label">promo</label>
     </div>
-    <button class="btn btn-primary" (click)="addToCart()">ajouter au panier</button>
-</div>
+    <button type="submit" class="btn btn-primary">ajouter au panier</button>
+</form>
 
 
 <div>
