--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/demo/forms" routerLinkActive="active">formulaires</a>
         </li>
+				<li class="nav-item">
+          <a class="nav-link" routerLink="/demo/httpClient" routerLinkActive="active">http client</a>
+        </li>
       </ul>
     </div>
   </nav>
